--- a/MB.Presentation.MVVM/Areas/Administrator/Pages/ArticleManagement/Create.cshtml
+++ b/MB.Presentation.MVVM/Areas/Administrator/Pages/ArticleManagement/Create.cshtml
@@ -23,8 +23,8 @@
                             <textarea name="ShortDescription" id="ShortDescription" class="form-control" rows="3"></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="ImagePath" class="control-label">Image:</label>
-                            <input name="ImagePath" id="ImagePath" class="form-control"/>
+                            <label for="Image" class="control-label">Image:</label>
+                            <input name="Image" id="Image" class="form-control"/>
                         </div>
                         <div class="form-group">
                             <label for="Category" class="control-label">Category:</label>
